@@ -14,7 +14,7 @@ use Exporter;
 
 our @ISA = ('Exporter');
 
-our @EXPORT = ('&backtrace');
+our @EXPORT = ('&caller_fixed', '&get_backtrace', '&backtrace');
 
 =head1 NAME
 
@@ -29,6 +29,58 @@ The Warewulf::Debug provides debugging functions
     use Warewulf::Debug;
 
 
+=item caller_fixed()
+
+Fixed version of caller() that actually does the right thing.  Returns
+the Nth stack frame, not counting itself.
+
+=cut
+
+sub
+caller_fixed($)
+{
+    my $idx = shift || 0;
+    my ($pkg, $file, $line, $subroutine);
+
+    $idx++;
+    (undef, undef, undef, $subroutine) = caller($idx);
+    if (!defined($subroutine)) {
+        $subroutine = "MAIN";
+    }
+    $subroutine =~ s/\w+:://g;
+    if ($subroutine =~ /^\w+$/) {
+        $subroutine .= "()";
+    }
+    ($pkg, $file, $line) = caller($idx - 1);
+    if ($file && $file =~ /^.*\/([^\/]+)$/) {
+        $file = $1;
+    }
+    return ($pkg || "", $file || "", $line || "", $subroutine);
+}
+
+=item get_backtrace()
+
+Generate a stack trace in array form, one caller per line.
+
+=cut
+
+sub
+get_backtrace()
+{
+    my $start = shift || 0;
+    my (@trace, @tmp);
+
+    $start++;
+    for (my $i = $start; @tmp = caller($i); $i++) {
+        my ($file, $line, $subroutine);
+        my $idx = $i - $start;
+
+        (undef, $file, $line, $subroutine) = &caller_fixed($i);
+        push @trace, sprintf("%s\[%d\] $file:$line | $subroutine\n",  ' ' x $idx, $idx);
+    }
+    return ((wantarray()) ? (@trace) : (join('', @trace)));
+}
+
 =item backtrace()
 
 Throw a backtrace at the current location in the code.
@@ -37,21 +89,9 @@ Throw a backtrace at the current location in the code.
 sub
 backtrace()
 {
-    my $file             = ();
-    my $line             = ();
-    my $subroutine       = ();
-    my $i                = ();
-    my @tmp              = ();
-
     print STDERR "STACK TRACE:\n";
     print STDERR "------------\n";
-    for ($i = 0; @tmp = caller($i); $i++) {
-        $subroutine = $tmp[3];
-        (undef, $file, $line) = caller($i);
-        $file =~ s/^.*\/([^\/]+)$/$1/;
-        print STDERR '      ', ' ' x $i, "$subroutine() called at $file:$line\n";
-    }
-    print STDERR "\n";
+    print STDERR &get_backtrace(1), "\n";
 }
 
 
@@ -70,8 +110,8 @@ required approvals from the U.S. Dept. of Energy).  All rights reserved.
 =cut
 
 BEGIN {
-    $SIG{"__WARN__"} = sub { warn @_; &backtrace(); };
-    $SIG{"__DIE__"} = sub { &backtrace(); die @_; }; 
+    #$SIG{"__WARN__"} = sub { if (@_) { &backtrace(); warn @_; } };
+    #$SIG{"__DIE__"} = sub { if (@_) { &backtrace(); die @_; } }; 
 }
 
 1;
